# multi-account-ai-control

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
apps/web/: .env.example  biome.json  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/about/: loading.tsx  page.tsx
apps/web/src/app/accounts/: loading.tsx  page.tsx
apps/web/src/app/audit/: loading.tsx  page.tsx
apps/web/src/app/data/: loading.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/providers/: loading.tsx  page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/settings/: loading.tsx  page.tsx
apps/web/src/components/: app-shell-header.tsx  command-palette.tsx  idle-lock-screen.tsx  page-guide.tsx  site-footer.tsx  theme-toggle.tsx
apps/web/src/components/ui/: button.tsx  confirm-dialog.tsx  pagination.tsx  skeleton.tsx
apps/web/src/features/accounts/: account-presenter.ts  account-types.ts  secret-blob.ts
apps/web/src/features/audit/: log-presenter.ts
apps/web/src/features/imports-exports/: import-export-service.ts  import-export-utils.ts
apps/web/src/features/notes/: note-presenter.ts
apps/web/src/features/usage/: usage-presenter.ts  (+1 more)
apps/web/src/lib/: datetime.ts  db.ts  env.ts  i18n.ts  normalization.ts  utils.ts
apps/web/src/schemas/: account.ts  auth.ts  import-export.ts  log.ts  note.ts  provider.ts  settings.ts  usage.ts  user.ts
desktop/tauri/launcher-dist/: index.html
desktop/tauri/next-runtime/: start-runtime.cjs
desktop/tauri/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/launcher-dist/: index.html
desktop/tauri/src-tauri/next-runtime/: start-runtime.cjs
desktop/tauri/src-tauri/next-runtime/apps/web/: server.js
desktop/tauri/src-tauri/src/: connectors.rs  main.rs
docs/: ROADMAP.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260411113000_init/: migration.sql
prisma/migrations/20260412093000_user_locale_system_admin/: migration.sql
prisma/migrations/20260412203000_password_reset_tokens/: migration.sql
releases/desktop/v0.1.0-20260414-174937/: SHA256SUMS.txt  release-manifest.json
releases/desktop/v0.1.0-20260414-185420/: SHA256SUMS.txt  release-manifest.json
scripts/: bootstrap-admin.ts  desktop-preflight.mjs  desktop-prepare-runtime.mjs  desktop-release.mjs  register-backup-scheduler.ps1  run-critical-tests.mjs  security-audit.mjs
(+101 files in other folders)
