[package]
name = "multi-account-ai-control-desktop"
version = "0.1.0"
description = "Desktop wrapper baseline for Multi Account AI Control"
authors = ["MAAC Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Optional: enable native OS notifications (requires Tauri notification plugin)
# Activate with: cargo build --features notifications
[dependencies.tauri-plugin-notification]
version = "2"
optional = true

[features]
default = ["sqlite"]
# Enable rusqlite feature to support reading Cursor/Windsurf state.vscdb SQLite databases
sqlite = ["dep:rusqlite"]
# Enable native OS notifications
notifications = ["dep:tauri-plugin-notification"]

[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]
